# uStatusBoard

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  status_board.py
examples/: dht_status.py  jenkins_demo.py  module_usage.py  pixel_server.py  random_led.py
hardware/V01/: uStatusBoard.brd  uStatusBoard.sch
hardware/V02/: uStatusBoard.brd  uStatusBoard.sch
release/: status_board.py
scripts/: uncomment.py
