[tool.poetry]
name = "ustatusboard"
version = "0.1.0"
description = ""
authors = ["yeyeto2788 <juanernestobiondi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pyminifier = "^2.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
